@@ -2,6 +2,8 @@ from allauth.socialaccount import providers
 from allauth.socialaccount.providers.base import ProviderAccount
 from allauth.socialaccount.providers.oauth.provider import OAuthProvider
 
+from allauth.socialaccount import app_settings
+
 class LinkedInAccount(ProviderAccount):
     pass
 
@@ -11,5 +13,11 @@ class LinkedInProvider(OAuthProvider):
     name = 'LinkedIn'
     package = 'allauth.socialaccount.providers.linkedin'
     account_class = LinkedInAccount
+
+    def get_default_scope(self):
+        scope = []
+        if app_settings.QUERY_EMAIL:
+            scope.append('r_emailaddress')
+        return scope
 
 providers.registry.register(LinkedInProvider)
