@@ -8,13 +8,14 @@ from allauth.socialaccount.providers.oauth.views import (OAuthAdapter,
                                                          OAuthLoginView,
                                                          OAuthCallbackView)
 from allauth.socialaccount.models import SocialAccount, SocialLogin
+from allauth.utils import valid_email_or_none
 
 from provider import LinkedInProvider
 
 
 class LinkedInAPI(OAuth):
     url = 'https://api.linkedin.com/v1/people/~'
-    fields = ['id', 'first-name', 'last-name']
+    fields = ['id', 'first-name', 'last-name', 'email-address']
 
     def get_user_info(self):
         url = self.url + ':(%s)' % ','.join(self.fields)
@@ -55,8 +56,10 @@ class LinkedInOAuthAdapter(OAuthAdapter):
                              self.request_token_url)
         extra_data = client.get_user_info()
         uid = extra_data['id']
+        email = valid_email_or_none(extra_data.get('email-address', ''))
         user = User(first_name=extra_data.get('first-name', ''),
-                    last_name=extra_data.get('last-name', ''))
+                    last_name=extra_data.get('last-name', ''),
+                    email=email)
         account = SocialAccount(user=user,
                                 provider=self.provider_id,
                                 extra_data=extra_data,
